Camera testing + adding testing imports back to build.gradle.kts